src/handlers/sonarr_compat/tests/snapshots/ryokan__handlers__sonarr_compat__tests__system__sonarr_language_profile.snap
---
source: src/handlers/sonarr_compat/tests/system.rs
expression: body
---
[
  {
    "id": 1,
    "name": "English"
  }
]
