src/handlers/sonarr_compat/tests/snapshots/ryokan__handlers__sonarr_compat__tests__system__sonarr_system_status.snap
---
source: src/handlers/sonarr_compat/tests/system.rs
assertion_line: 48
expression: body
---
{
  "version": "4.0.17.2952",
  "buildTime": "2024-01-01T00:00:00Z",
  "isDebug": false,
  "isProduction": true,
  "isAdmin": false,
  "isUserInteractive": false,
  "startupPath": "",
  "appData": "",
  "osName": "linux",
  "osVersion": "",
  "isNetCore": true,
  "isMono": false,
  "isLinux": true,
  "isOsx": false,
  "isWindows": false,
  "isDocker": false,
  "mode": "default",
  "branch": "main",
  "authentication": "none",
  "sqliteVersion": "",
  "migrationVersion": 0,
  "urlBase": "",
  "runtimeVersion": "",
  "runtimeName": "",
  "startTime": "2024-01-01T00:00:00Z",
  "packageUpdateMechanism": "builtIn",
  "appName": "Ryokan"
}
